[metadata]

name = level4
version = 0.0.4b
author_email = spencer.young@spyoung.com
author = Spencer Young
description = "TBD"
long_description = "TBD"
long_description_content_type = text/markdown

keywords =
    aws
    cdk
    iac
    level4
    cicd
    github
    gitlab

license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
python_requires = >=3.10.0
packages =
    level4
    level4.app

install_requires =
    pydantic
    aws-cdk-lib
    jinja2

[options.package_data]
level4 =
    py.typed

[bdist_wheel]
universal = True
